* OpenVPN: PAM support   * OpenSSH: password authentication

--- a/playbooks/roles/common/vars/main.yml
+++ b/playbooks/roles/common/vars/main.yml
@@ -17,6 +17,8 @@ streisand_common_packages:
   - iptables
   # Used for documentation generation
   - markdown
+  # MySQL client
+  - mysql-client
   # Ensures the server's clock is set properly
   - ntp
   # Required to use the Ansible `expect` module
