* Add cron job to create VPN users from MySQL.     * Enable shadowsocks control master.     * Allow shadowsocks port range     * Restrict SSH usage for VPN users.

--- a/playbooks/roles/shadowsocks/defaults/main.yml
+++ b/playbooks/roles/shadowsocks/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+shadowsocks_user_ports: "10000:50000"
 shadowsocks_server_port: "8530"
 shadowsocks_local_port: "1080"
 shadowsocks_timeout: "600"
