* Add mysql-user role to playbook    * Fix openvpn PAM config

--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -209,7 +209,7 @@
   with_items: "{{ openvpn_firewall_rules }}"
 
 - name: Configure PAM settings for OpenVPN
-  file:
+  copy:
     src: etc_pam.d-openvpn
     dest: /etc/pam.d/openvpn
 
