* Replace ss-server with ss-manager(shadowsocks multi-user)

--- a/playbooks/roles/shadowsocks/tasks/main.yml
+++ b/playbooks/roles/shadowsocks/tasks/main.yml
@@ -29,19 +29,27 @@
   command: cat {{ shadowsocks_password_file }}
   register: shadowsocks_password
 
-- name: Multi-User: create ss systemd override dir
+- name: Multi-User - create ss systemd override dir
   file:
     path: /etc/systemd/system/shadowsocks-libev.service.d
     recurse: yes
     state: directory
 
-- name: Multi-User: configure SS manager service
+- name: Multi-User - configure SS manager service
   copy:
     src: systemd-shadowsocks-libev_override.conf
     dest: /etc/systemd/system/shadowsocks-libev.service.d/override.conf
     mode: 0640
   notify: Reload systemd 
 
+- name: Multi-User - replace ss-server with ss-manager
+  command: pkill -9 ss-server
+  ignore_errors: yes
+
+- name: Multi-User - replace ss-server with ss-manager
+  service: 
+    name: shadowsocks-libev
+    state: restarted
 
 - name: Generate Shadowsocks config file
   template:
